# mseqtools

./: Makefile.am  README.md  configure.ac  mSequence.c  mSequence.h  make_readme.sh  mseq.h  mseq_subset.c  mseqtools.c
